--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-to-do-list></app-to-do-list>
+<app-loading *ngIf="isLoading"></app-loading>
+<app-to-do-list *ngIf="!isLoading"></app-to-do-list>
+<app-toasts></app-toasts>
