--- a/src/app/components/to-do-list/to-do-list.component.html
+++ b/src/app/components/to-do-list/to-do-list.component.html
@@ -1,35 +1,22 @@
 <div class="container">
-  <h1 class="title">
-    ToDo List
-  </h1>
-  <ul class="list">
-    <li class="list__item">
-      <p class="item__text">
-        Buy Iphone
-      </p>
-      <button class="item__btn">
-        <img src="assets/img/delete.svg" alt="">
-      </button>
-    </li>
-    <li class="list__item">
-      <p class="item__text">
-        Watch TV
-      </p>
-      <button class="item__btn">
-        <img src="assets/img/delete.svg" alt="">
-      </button>
-    </li>
-    <li class="list__item">
-      <p class="item__text">
-        Sleep 8 hours
-      </p>
-      <button class="item__btn">
-        <img src="assets/img/delete.svg" alt="">
-      </button>
-    </li>
-  </ul>
-  <div class="add">
-    <input type="text" class="add__input" placeholder="Add your new todo">
-    <button class="add__btn">Add Task</button>
+  <div class="column">
+    <div class="inner">
+      <h1 class="title">
+        ToDo List
+      </h1>
+      <ul class="list">
+        <li *ngFor="let item of toDoStoreService.items" (click)="onItemClick(item)"
+            [ngStyle]="{'background-color': item.clicked ? 'red' : ''}">
+          <app-to-do-item [todo]="item" (removeItem)="toDoStoreService.deleteTask($event)">
+          </app-to-do-item>
+        </li>
+      </ul>
+    </div>
+    <app-add-task></app-add-task>
+  </div>
+  <div class="description">
+    <p>
+      {{description}}
+    </p>
   </div>
 </div>
