--- a/src/app/components/tooltip/tooltip.component.html
+++ b/src/app/components/tooltip/tooltip.component.html
@@ -1,3 +1,3 @@
-<div class="tooltip" [style.left]="left + 'px'" [style.top]="top + 'px'">
+<div class="tooltip" [style.left.px]="left" [style.top.px]="top">
   {{tooltip}}
 </div>
