--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 
-.add__btn {
+.btn--add {
   width: 100px;
   height: 100%;
   border-radius: 5px;
