--- a/src/app/components/to-do-item/to-do-item.component.scss
+++ b/src/app/components/to-do-item/to-do-item.component.scss
@@ -1,41 +1,46 @@
-.list__item {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
-  background-color: #DFDFDF;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.item__text {
-  font-weight: 600;
-  font-size: 19px;
-  color: #343434;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  display: block;
-  overflow: hidden;
-  max-width: 350px;
-
-  input {
-    background-color: transparent;
-    font-size: 20px;
+.list {
+  &__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    background-color: #DFDFDF;
+    padding: 10px;
+    border-radius: 5px;
   }
 }
 
-.item__btn {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
+.item {
+  &__text {
+    font-weight: 600;
+    font-size: 19px;
+    color: #343434;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: block;
+    overflow: hidden;
+    max-width: 300px;
 
-  img {
-    width: 40px;
-    height: 40px;
-    border-radius: 139px;
-    background-color: #fff;
-    padding: 5px;
+    input {
+      background-color: transparent;
+      font-size: 20px;
+      width: 200px;
+    }
+  }
+
+  &__btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 139px;
+      background-color: #fff;
+      padding: 5px;
+    }
   }
 }
 
@@ -44,4 +49,10 @@
   flex-direction: row;
   gap: 5px;
   align-items: center;
+}
+
+.checkbox {
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
 }
