--- a/src/app/components/to-do-list/to-do-list.component.html
+++ b/src/app/components/to-do-list/to-do-list.component.html
@@ -4,15 +4,20 @@
       <h1 class="title">
         ToDo List
       </h1>
-      <ul class="list">
+      <div class="status">
+        <div class="status__inner" *ngFor="let item of status">
+          <button (click)="filterByStatus(item)">{{item}}</button>
+        </div>
+      </div>
+      <ul class="list" *ngIf="toDoStoreService.items !== []">
         <li *ngFor="let item of toDoStoreService.items" (click)="onItemClick(item)"
             [ngStyle]="{'background-color': item.clicked ? 'red' : ''}">
-          <app-to-do-item [todo]="item" (removeItem)="toDoStoreService.deleteTask($event)">
+          <app-to-do-item [todo]="item" (removeItem)="toDoStoreService.deleteTask(item.id)">
           </app-to-do-item>
         </li>
       </ul>
     </div>
-    <app-add-task></app-add-task>
+    <app-todo-create-item></app-todo-create-item>
   </div>
   <div class="description">
     <p>
