--- a/src/app/components/todo-create-item/todo-create-item.component.html
+++ b/src/app/components/todo-create-item/todo-create-item.component.html
@@ -4,12 +4,13 @@
     <textarea type="text" matInput class="add__input" placeholder="description" [(ngModel)]="textTask"
               style="max-width: 500px; min-width: 500px">
           </textarea>
-    <app-button [title]="'Add Task'"
-                (click)="toDoStoreService.addTask(titleTask, textTask); textTask = ''; titleTask=''"
-                [disabled]="!titleTask"
-                [type]="'add'"
-                appTooltip
-                [tooltip]="'Add Task'">
+    <app-button
+      (click)="addTask(); textTask = ''; titleTask=''"
+      [disabled]="!titleTask"
+      [type]="'add'"
+      appTooltip
+      [tooltip]="'Add Task'">
+      Add Task
     </app-button>
   </div>
 </div>
