homework 7, in progress

--- a/src/app/components/to-do-list/to-do-list.component.html
+++ b/src/app/components/to-do-list/to-do-list.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="description">
     <p>
-      {{description}}
+     <app-details></app-details>
     </p>
   </div>
 </div>
