--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-loading *ngIf="isLoading"></app-loading>
-<app-to-do-list *ngIf="!isLoading"></app-to-do-list>
+<router-outlet *ngIf="!isLoading"></router-outlet>
 <app-toasts></app-toasts>
