--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,3 +1,1 @@
-<div class="spinning">
-  <img src="assets/img/spinning.gif" alt="">
-</div>
+<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
