--- a/src/app/components/todo-create-item/todo-create-item.component.html
+++ b/src/app/components/todo-create-item/todo-create-item.component.html
@@ -2,7 +2,7 @@
   <div class="inner">
     <input type="text" matInput class="add__input" placeholder="Add your new todo" [(ngModel)]="titleTask">
     <textarea type="text" matInput class="add__input" placeholder="description" [(ngModel)]="textTask"
-              style="max-width: 500px; min-width: 500px">
+              style="max-width: 400px; min-width: 400px; max-height: 100px;min-height: 100px;">
           </textarea>
     <app-button
       (click)="addTask(); textTask = ''; titleTask=''"
