--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ html, body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: #151719;
 }
 
 input, button, textarea {
